// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`polkadotXcm limitedReserveTransferAssets v0 should be correct config 1`] = `
{
  "extrinsic": "limitedReserveTransferAssets",
  "getParams": [Function],
  "pallet": "polkadotXcm",
  "successEvent": "Attempted",
}
`;

exports[`polkadotXcm limitedReserveTransferAssets v0 should get correct params 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
            "network": "Any",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V0": [
      {
        "ConcreteFungible": {
          "amount": 1000n,
          "id": "Null",
        },
      },
    ],
  },
  0,
  {
    "Limited": 1000000000,
  },
]
`;

exports[`polkadotXcm limitedReserveTransferAssets v1 here should be correct config 1`] = `
{
  "extrinsic": "limitedReserveTransferAssets",
  "getParams": [Function],
  "pallet": "polkadotXcm",
  "successEvent": "Attempted",
}
`;

exports[`polkadotXcm limitedReserveTransferAssets v1 here should get correct params 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
            "network": "Any",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 1000n,
        },
        "id": {
          "Concrete": {
            "interior": "Here",
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  {
    "Limited": 1000000000,
  },
]
`;

exports[`polkadotXcm limitedReserveTransferAssets v1 x1 should be correct config 1`] = `
{
  "extrinsic": "limitedReserveTransferAssets",
  "getParams": [Function],
  "pallet": "polkadotXcm",
  "successEvent": "Attempted",
}
`;

exports[`polkadotXcm limitedReserveTransferAssets v1 x1 should get correct params 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
            "network": "Any",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 1000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X1": {
                "PalletInstance": 5,
              },
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  {
    "Limited": 1000000000,
  },
]
`;

exports[`polkadotXcm limitedReserveTransferAssets v1 x2 should be correct config 1`] = `
{
  "extrinsic": "limitedReserveTransferAssets",
  "getParams": [Function],
  "pallet": "polkadotXcm",
  "successEvent": "Attempted",
}
`;

exports[`polkadotXcm limitedReserveTransferAssets v1 x2 should get correct params 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
            "network": "Any",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 1000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "PalletInstance": 10,
                },
                {
                  "GeneralIndex": 50,
                },
              ],
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  {
    "Limited": 1000000000,
  },
]
`;

exports[`polkadotXcm limitedReserveWithdrawAssets v1 x2 should be correct config 1`] = `
{
  "extrinsic": "limitedReserveWithdrawAssets",
  "getParams": [Function],
  "pallet": "polkadotXcm",
  "successEvent": "Attempted",
}
`;

exports[`polkadotXcm limitedReserveWithdrawAssets v1 x2 should get correct params 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
            "network": "Any",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 1000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "Parachain": 1000,
                },
                {
                  "PalletInstance": 10,
                },
              ],
            },
            "parents": 1,
          },
        },
      },
    ],
  },
  0,
  {
    "Limited": 1000000000,
  },
]
`;
